# internal/model/anon.go
@@ -32,3 +32,10 @@ type AnonEntry struct {
 	Hash string  `json:"hash"`
 	URL  *string `json:"url,omitempty"`
 }
+
+type AnonCollectionSummary struct {
+	Hash         string `json:"hash"`
+	FriendlyName string `json:"friendly_name,omitempty"`
+	Version      int    `json:"version"`
+	CreatedAt    string `json:"created_at"`
+}
